# 2174289174

./: .gitignore  Cargo.toml  README.md  transactions.csv
src/: account.rs  amount.rs  engine.rs  error.rs  lib.rs  main.rs  transaction.rs
tests/: e2e.rs
tests/fixtures/1/: output.csv
tests/fixtures/2/: input.csv  output.csv
tests/fixtures/3/: input.csv  output.csv
