[package]
name = "randomlib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
rust_decimal = { version = "1.16.0", features = ["std", "serde-str"] }

